--- a/style.css
+++ b/style.css
@@ -10,30 +10,29 @@ body {
     
 }
 .post {
-  width: 300px;
-  height: 150px;
+  width: 200px;
+  
   margin-top: 10px;
    margin-left: 30px;
    padding: 10px;
    display: flex;
+   flex-direction: column-reverse;
    border-radius: 10px;
    background-position: center;
    background-color: darkred;
    position: relative;
+   
 }
 
 .workout {
-  font-size: large;
-  display: flex;
+  font-size: small;
   justify-content: center;
   background-color: cornflowerblue;
   background-position: center;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
-  position: absolute;
-  top: 0%;
-  left: 0%;
+  
 }
 
 .userInfo {
@@ -41,11 +40,11 @@ body {
   display: flex;
   justify-content: center;
   background-color: cornflowerblue;
-  background-position: center;
+  
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
-  position: absolute;
+  position: ;
   bottom: 0%;
   left: 0%;
 }
@@ -54,9 +53,7 @@ img {
   height: 70%;
   width: 40%;
   background-color: bisque;
-  position: absolute;
-  top: 5%;
-  right: 10%;
+  
 }
 
 button
